EPMRPP-114707 fix sonar